deployments/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-deployer-api
  namespace: app-deployer
  labels:
    app.kubernetes.io/name: app-deployer
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: app-deployer
    app.kubernetes.io/component: api
---
apiVersion: v1
kind: Service
metadata:
  name: app-deployer-worker
  namespace: app-deployer
  labels:
    app.kubernetes.io/name: app-deployer
    app.kubernetes.io/component: worker
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: app-deployer
    app.kubernetes.io/component: worker
